--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,6 +24,12 @@ a {
 }
 
 .map-container {
-  width: 100%;
-  height: 90vh;
+  border-radius: .5rem;
+  width: 60%;
+  height: 60vh;
+}
+.form-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
